fix waterToday
